2015-09-21  Richard Biener  <rguenther@suse.de>

	Backport from mainline
	2015-07-08  Richard Biener  <rguenther@suse.de>

	PR tree-optimization/66793
	* gimple-ssa-isolate-paths.c (insert_trap_and_remove_trailing_statemen):
	Properly split the block after stmts ending it.

	2015-08-05  Richard Biener  <rguenther@suse.de>

	PR tree-optimization/67055
	* tree-ssa-ccp.c (fold_builtin_alloca_with_align): Handle
	NULL gimple_block.

	2015-08-05  Richard Biener  <rguenther@suse.de>

	PR tree-optimization/67121
	* tree-if-conv.c (combine_blocks): Clear range-info produced
	by stmts no longer executed conditionally.

	2015-09-16  Richard Biener  <rguenther@suse.de>

	PR middle-end/67271
	* fold-const.c (native_encode_expr): Bail out on bogus offsets.

	2015-07-22  Richard Biener  <rguenther@suse.de>

	PR tree-optimization/66952
	* tree-ssa-ifcombine.c (pass_tree_ifcombine::execute): For
	blocks we end up executing unconditionally reset all SSA
	info such as range and alignment.
	* tree-ssanames.h (reset_flow_sensitive_info): Declare.
	* tree-ssanames.c (reset_flow_sensitive_info): New function.

	2015-09-15  Richard Biener  <rguenther@suse.de>

	PR tree-optimization/67470
	* tree-ssa-loop-im.c (execute_sm_if_changed): Preserve PHI
	structure for PHI hoisting by inserting a forwarder block
	if appropriate.

2015-09-21  Kaz Kojima  <kkojima@gcc.gnu.org>

	Backport from mainline
	2015-09-16  Kaz Kojima  <kkojima@gcc.gnu.org>

	PR target/67573
	* config/sh/sh.md (call_pcrel): Add early clobber to scratch
	operand.
	(call_value_pcrel, sibcall_pcrel, sibcall_value_pcrel): Likewise.

2015-09-20  Oleg Endo  <olegendo@gcc.gnu.org>

	Backport from mainline
	2015-09-14  Oleg Endo  <olegendo@gcc.gnu.org>

	PR target/67061
	* config/sh/sh-protos.h (sh_find_set_of_reg): Simplfiy for-loop.
	Handle call insns.

2015-09-19  John David Anglin  <danglin@gcc.gnu.org>

	* config/pa/pa.c (pa_function_ok_for_sibcall): Remove special treatment
	of TARGET_ELF32.
